<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_margin"
    android:elevation="8dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:cardBackgroundColor="@color/light_gray"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/movieContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/poster"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/movie_poster_description"
            app:actualImageScaleType="fitStart"
            app:fadeDuration="300"
            app:placeholderImage="@drawable/ic_local_movies_24"
            app:placeholderImageScaleType="fitCenter"
            app:failureImage="@drawable/ic_local_movies_24"
            app:failureImageScaleType="fitCenter"
            />

        <LinearLayout
            android:id="@+id/movieInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_title_label"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_year_label"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_director_label"
                android:textColor="#455A64" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_plot_label"
                android:textColor="#455A64" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            >
            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_border_24"
                android:contentDescription="@string/favorite_icon" />
        </FrameLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
